fix: update theme version to 1.9.9; enhance navigation z-index handling and improve closeMenu functionality

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://accelsiors.com
 Author: Accelsiors Dev Team (Ioannis Passalidis i.passalidis@accelsiors.com)
 Author URI: https://accelsiors.com
 Description: Custom FSE theme based on 2026 Rebranding Proposal. Focus on HexaHelix & Speed.
-Version: 1.9.7
+Version: 1.9.9
 Requires at least: 6.4
 Tested up to: 6.9
 Requires PHP: 7.4
@@ -74,6 +74,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
+}
+
+.wp-block-navigation__responsive-container:not(.is-menu-open) {
+    z-index: 10 !important;
 }
 
 /* =====================================================
@@ -217,6 +221,8 @@ input, textarea,
     overflow-x: hidden;
     margin: 0 !important;
     padding: 0 !important;
+    position: relative;
+    z-index: 1;
 }
 
 [data-barba="container"] {
@@ -225,6 +231,8 @@ input, textarea,
     flex: 1;
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 1;
 }
 
 /* Alignments */
